# vikram

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  compose.example.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: current_architecture.md  deployment.md  hooks.md  mcp_and_skills.md  schema.dbml  telegram_live_testing.md  threaded_conversations.md  tools.md
spec/: telegram.toml
spec/coder/: agent.toml  system_prompt.md
spec/coder/skills/conventional-commits/: SKILL.md  examples.md
spec/shared/: command_policy.toml
spec/shared/context/: production.md
spec/shared/skills/web-research/: SKILL.md
spec/vikram/: agent.toml  system_prompt.md
specs/: curl_installer_spec.md
tests/: test_acp.py  test_agent.py  test_api.py  test_api_gateway.py  test_cli.py  test_coding_tools.py  test_command_policy.py  test_context.py  test_dbos_gateway.py  test_gateway.py  test_hooks.py  test_install.py  test_local_webhook.py  test_mcp.py  test_observability.py  test_packaging.py  test_skills.py  test_spec.py  test_telegram.py  test_telegram_config.py  test_update.py
vikram/: __init__.py  acp.py  agent.py  api.py  cli.py  command_policy.py  config.py  context.py  dbos_gateway.py  delegation.py  gateway.py  hooks.py  local_webhook.py  logging.py  mcp.py  observability.py  settings.py  skills.py  spec.py  streaming.py  telegram.py  telegram_config.py  tools.py  update.py
