[project]
name = "vikram"
version = "0.1.0"
description = "Public spec-driven Strands agent runtime."
requires-python = ">=3.13"
dependencies = [
    "agent-client-protocol>=0.10.1",
    "cloudevents>=2.0.0",
    "dbos>=2.21.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "parallel-web>=0.6.0",
    "prompt-toolkit>=3.0.52",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "rich>=14.2.0",
    "strands-agents-tools>=0.8.1",
    "strands-agents[openai]>=1.44.0",
    "structlog>=25.5.0",
    "telegramify-markdown>=1.1.5",
    "uvicorn[standard]>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"spec" = "spec"

[project.scripts]
vikram = "vikram.cli:main"
vikram-api = "vikram.api:run"
vikram-acp = "vikram.acp:main"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
